tests/NormalTests/paczka1/fuzzy1/89659894.err
Error in line 1: rKNaeT A389 65,26
Error in line 5: rKNaeT S791 35,9
Error in line 2: 7lJCn8JnyTC A389 1,3
Error in line 18: 7lJCn8JnyTC A652 36,0
Error in line 26: 7lJCn8JnyTC S791 88,5
Error in line 29: 7lJCn8JnyTC A652 46,5
Error in line 22: rKNaeT S227 62,3
